--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -1,3 +1,8 @@
-.app {
-  text-align: center;
+.app__container {
+  height: 100vh;
+  width: 100vw;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
