--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,29 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body,
+div,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --main-font: “Roboto”, sans-serif;
+  --timer-background-color: #ffffff;
+  --timer-border: 1px solid #000000;
+  --timer-height: 70%;
+  --timer-width: 70%;
+}
+
+@media screen and (max-width: 1024px) {
+  :root {
+    --timer-height: 100%;
+    --timer-width: 100%;
+  }
 }
